# jupyter-data-viewer

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
jupyter-config/jupyter_server_config.d/: jupyterlab_data_viewer.json
jupyterlab_data_viewer/: __init__.py  data_viewer.py  handlers.py
jupyterlab_data_viewer/labextension/: package.json
jupyterlab_data_viewer/labextension/static/: 509.0e20b9c3e87369850bd1.js  509.edee2c89a29ee6a17a47.js  remoteEntry.0c7cd9432afecee1d58c.js  third-party-licenses.json
lib/: commands.d.ts  commands.js  index.d.ts  index.js
lib/components/: data-table.d.ts  data-table.js  data-viewer-panel.d.ts  data-viewer-panel.js  query-editor.d.ts  query-editor.js
lib/services/: data-service.d.ts  data-service.js
src/: commands.ts  index.ts
src/components/: data-table.tsx  data-viewer-panel.tsx  query-editor.tsx
src/jupyterlab_data_viewer/: data_viewer.py  handlers.py
src/jupyterlab_data_viewer/labextension/: package.json
src/jupyterlab_data_viewer/labextension/static/: 509.7e1542ddeb559cdab1b8.js  509.95f885707ccde4e39c0f.js  509.f5e8985ab357809b4256.js  remoteEntry.5418ed066c66f197f376.js  remoteEntry.dadd72c20fdeef251924.js  remoteEntry.ed5579d4ef8751800ca2.js  remoteEntry.f5130c8601132ff1ec5a.js
src/services/: data-service.ts
tests/: README.md  jest.config.js
tests/integration/: test-data-flow.ts
tests/mocks/: README.md  test_data.json
tests/python/: test_data_viewer.py
tests/unit/: test-api-client.ts  test-commands.ts
tests/unit/components/: test-data-table.tsx
