[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyterlab-data-viewer"
version = "0.1.0"
description = "JupyterLab extension for viewing and querying data files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Brandon Harris", email = "bmharris626@gmail.com"},
]
classifiers = [
    "Framework :: Jupyter",
]
dependencies = [
    "jupyterlab>=4.0.0",
    "jupyter_server>=2.0.0",
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
    "duckdb>=0.7.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
]

[project.urls]
Homepage = "https://github.com/bmharris626/jupyter-data-viewer"
Repository = "https://github.com/bmharris626/jupyter-data-viewer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
jupyterlab_data_viewer = ["labextension/**"]

[tool.setuptools.data-files]
"etc/jupyter/jupyter_server_config.d" = ["jupyter-config/jupyter_server_config.d/jupyterlab_data_viewer.json"]